Add support for antiparticles and annihilation mechanics in Conway's Game of Life

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   --pill-border: #23314a;
   --kbd-border: #2b3b59;
   --cell: #e8eef6;
+  --anti-cell: #ff4fd8;
   --grid: #2b3b59;
 
   /* Wave (background medium) */
